--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "graphql-request": "^5.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.8.0",
     "react-router-dom": "^6.10.0"
   },
   "devDependencies": {
