--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
-    "react-router-dom": "^6.10.0"
+    "react-router-dom": "^6.10.0",
+    "use-debounce": "^9.0.3"
   },
   "devDependencies": {
     "@graphql-codegen/cli": "3.2.2",
